tests/fixtures/errors/non_exhaustive_bool.sur
// Error: Non-exhaustive bool match

mod test {
    pub fn main() -> int {
        let b = true;

        // Missing false case
        match b {
            true => 1,
        }
    }
}
